# python-project-lvl2

./: Makefile  README.md  pyproject.toml
gendiff/: diff.py  diff_generator.py  formatter.py  formatter_json.py  formatter_plain.py  formatter_stylish.py  parser.py
gendiff/scripts/: gendiff.py
tests/: test_all.py  test_diff.py
